--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f5e487f7",
+   "id": "d2b0caa2",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7ef17746",
+   "id": "bf5bbf68",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f591e5e9",
+   "id": "fbc8a1b6",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c6cacc4e",
+   "id": "9ffce676",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "58c39844",
+   "id": "469391dd",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "bef1f97d",
+   "id": "120e7114",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "f478fccd",
+   "id": "89d46143",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "570f23a4",
+   "id": "aa2bbd05",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71cc735f",
+   "id": "a19fd4e5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46f41509",
+   "id": "a35ccda2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "ae63e13b",
+   "id": "4f72d4ca",
    "metadata": {
     "scrolled": true
    },
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "5073b891",
+   "id": "f516befa",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "14e70a10",
+   "id": "e795d9b5",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "8e04d42b",
+   "id": "e2e08350",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "363ffadd",
+   "id": "8af248a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "84f0320e",
+   "id": "00f0443a",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "77c20153",
+   "id": "60824599",
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "06863a47",
+   "id": "5ade9240",
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "ea6a72b7",
+   "id": "aca0c567",
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "b4c3c6f6",
+   "id": "8b7cd48b",
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "282396cd",
+   "id": "d1b52e89",
    "metadata": {},
    "outputs": [
     {
@@ -440,17 +440,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
-   "id": "75535759",
+   "execution_count": 170,
+   "id": "12de1d62",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter number 1:10\n",
-      "Enter number 2:50\n",
-      "60\n"
+      "Enter number 1:40\n",
+      "Enter number 2:20\n",
+      "The sum of 40 and 20 is 60.\n"
      ]
     }
    ],
@@ -459,7 +459,7 @@
     "number2 = input(\"Enter number 2: \".strip())\n",
     "\n",
     "if number1.isdigit() and number2.isdigit():\n",
-    "    print(int(number1) + int(number2))\n",
+    "    print(f\"The sum of {number1} and {number2} is {int(number1) + int(number2)}.\")\n",
     "else:\n",
     "    print(\"One of the entries is not a number\")"
    ]
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "825013ff",
+   "id": "edc9973c",
    "metadata": {},
    "outputs": [],
    "source": []
