--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "f24038f3",
+   "id": "f45fbb55",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "ff6fc0a9",
+   "id": "59907762",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "3fd82bd8",
+   "id": "3c3cd166",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "c6a24bed",
+   "id": "5df3bf8d",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "84abcb36",
+   "id": "d4c70817",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "84c417ab",
+   "id": "e862f912",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "4caf4792",
+   "id": "f7a1301d",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "90060f24",
+   "id": "c503aef8",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "28bf7ca9",
+   "id": "8e11f95f",
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "464bbf40",
+   "id": "0abe16e0",
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "ff68ccd7",
+   "id": "5c268320",
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "20da5ccc",
+   "id": "e91ebeeb",
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "0ed7d26c",
+   "id": "e922767d",
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "9e9adc8b",
+   "id": "f203b345",
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "16caafa6",
+   "id": "8e6a5e4c",
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "cdd2ba47",
+   "id": "77662306",
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "2d81fa78",
+   "id": "fc1198af",
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "790d3c19",
+   "id": "e3f417e6",
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "b3e7d763",
+   "id": "87afc24c",
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +745,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "14f3e673",
+   "id": "73a024d8",
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "4d378782",
+   "id": "3cfcc303",
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "618ef7a2",
+   "id": "b30efd6a",
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "89cc95df",
+   "id": "6b50bda2",
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "d89c2e83",
+   "id": "ed390922",
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "f01296cd",
+   "id": "3c5f93ce",
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +871,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "654d4a5c",
+   "id": "09eb42c8",
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "646523da",
+   "id": "a20bc334",
    "metadata": {},
    "outputs": [
     {
@@ -914,7 +914,7 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "51932754",
+   "id": "ca523ee8",
    "metadata": {},
    "outputs": [
     {
@@ -933,29 +933,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
-   "id": "41c995bc",
+   "execution_count": 157,
+   "id": "0cd0123a",
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (2272576867.py, line 3)",
+     "evalue": "invalid syntax (3231100440.py, line 3)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[156], line 3\u001b[0;36m\u001b[0m\n\u001b[0;31m    if num1, num2 = int(num1)\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  Cell \u001b[0;32mIn[157], line 3\u001b[0;36m\u001b[0m\n\u001b[0;31m    if num1, num2 = int(num1, num2):\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "num1 = input('Enter num1: ')\n",
     "num2 = input('Enter num2: ')\n",
-    "if num1, num2 = int(num1, num2)"
+    "if num1, num2 = int(num1, num2):\n",
+    "    print(num1 + num2)\n",
+    "else:\n",
+    "    print(f'{num1} is not numeric')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1c34f93",
+   "id": "5ab6763d",
    "metadata": {},
    "outputs": [],
    "source": []
