--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "6bfa3c68",
+   "id": "dd1cc096",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "bddd1aa3",
+   "id": "c94a6711",
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "ffdd1f3a",
+   "id": "855ae4c4",
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82caf7a1",
+   "id": "3c790f83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,10 @@
     "num2 = input('please, enter some number: ')\n",
     "\n",
     "if num1.isdigit():\n",
-    "    "
+    "    num1 = int(num1)\n",
+    "elif num2.isdigit():\n",
+    "    num2 = int(num2)\n",
+    "print(f'{num1} + {num2} = ')"
    ]
   }
  ],
