--- a/Sara_Sept 2nd, 2024.ipynb
+++ b/Sara_Sept 2nd, 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ad631694",
+   "id": "396f68fe",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4d6a0775",
+   "id": "43dd1130",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3c44c660",
+   "id": "8599025f",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5eb349f0",
+   "id": "91f7d7c3",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "680d7d10",
+   "id": "54862ab9",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8ca0408",
+   "id": "9760ffa2",
    "metadata": {},
    "source": [
     "## Bigger headline"
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "2c912416",
+   "id": "7c4efb6a",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a9341398",
+   "id": "a9cbba90",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a3095e79",
+   "id": "a3cefb13",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "c28db038",
+   "id": "7b160aa7",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "d93f39d0",
+   "id": "158c47b2",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "a3231221",
+   "id": "75042268",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "3749b144",
+   "id": "6554cd08",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "7188156a",
+   "id": "c7dd2259",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "38e1e764",
+   "id": "7ddc3327",
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "08710b14",
+   "id": "afce2a43",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "c2659cb9",
+   "id": "868a2189",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "62c38935",
+   "id": "4a5ad872",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "3d48f09b",
+   "id": "8f8edf11",
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "4b83dbea",
+   "id": "494250be",
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "6da9f35d",
+   "id": "ebf4134b",
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "e49b80bf",
+   "id": "50ba36dc",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "0cad4e4b",
+   "id": "fdb86061",
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "9e9405dc",
+   "id": "3f3b5f14",
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "11139812",
+   "id": "864fd8af",
    "metadata": {},
    "outputs": [
     {
@@ -555,8 +555,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
-   "id": "5cc7dac5",
+   "execution_count": 105,
+   "id": "7167eb2e",
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +565,7 @@
      "text": [
       "Put in 1 number: 1\n",
       "Put in a 2nd number: 2\n",
-      "1 2 = 12\n"
+      "1 + 2 = 12\n"
      ]
     }
    ],
@@ -573,7 +573,7 @@
     "x= input('Put in 1 number: ')\n",
     "y= input('Put in a 2nd number: ')\n",
     "if x.isdigit and y.isdigit:\n",
-    "    print (x , y, \"=\", (x+y))\n",
+    "    print (x , '+', y, \"=\", int(x)+inty))\n",
     "else:\n",
     "    print('Bad input')\n"
    ]
@@ -581,7 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31f8cf3f",
+   "id": "cbb8881c",
    "metadata": {},
    "outputs": [],
    "source": []
