--- a/Ahmed Habib , 2nd Sep 2024.ipynb
+++ b/Ahmed Habib , 2nd Sep 2024.ipynb
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "cc0be1b3",
+   "id": "6a23655b",
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "1adf357b",
+   "id": "880c59f0",
    "metadata": {},
    "outputs": [
     {
@@ -237,17 +237,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "id": "4ced4cf1",
+   "execution_count": 67,
+   "id": "555ddcc4",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Enter first number: 123\n",
-      " Enter second number: 4\n",
-      "1234\n"
+      " Enter first number: hello\n",
+      " Enter second number: 123\n",
+      "this is not numeric\n"
      ]
     }
    ],
@@ -255,13 +255,15 @@
     "number1 = input (' Enter first number: ')\n",
     "number2 = input (' Enter second number: ')\n",
     "if number1.isdigit() and number2.isdigit():\n",
-    "    print (number1 + number2)"
+    "    print (number1 + number2)\n",
+    "else:\n",
+    "    print ('this is not numeric')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48bd8148",
+   "id": "193ae40b",
    "metadata": {},
    "outputs": [],
    "source": []
