--- a/Fatos Blakaj Monday.ipynb
+++ b/Fatos Blakaj Monday.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "dd40f4b2",
+   "id": "8ddd99eb",
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "1cbb1f69",
+   "id": "5041fd78",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "783d1025",
+   "id": "d7a00f0a",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "208e532b",
+   "id": "57962ba3",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "c974750e",
+   "id": "fbf19e9d",
    "metadata": {
     "scrolled": true
    },
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "85b0be60",
+   "id": "08793ea7",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "d524b213",
+   "id": "94128eca",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "a3cd391b",
+   "id": "8427555c",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "48b620b2",
+   "id": "58e4c469",
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "f5f4aea7",
+   "id": "9dbf1726",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "78713163",
+   "id": "e1a92a2b",
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "370292d6",
+   "id": "24d9da41",
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "5ddf56f5",
+   "id": "e71ce34f",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "cbf6ff95",
+   "id": "8f491332",
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "1fc9a862",
+   "id": "b2b25cef",
    "metadata": {},
    "outputs": [
     {
@@ -364,8 +364,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "id": "dd1180d0",
+   "execution_count": 83,
+   "id": "9a99bf71",
    "metadata": {},
    "outputs": [
     {
@@ -373,18 +373,8 @@
      "output_type": "stream",
      "text": [
       "Please write the first number: 3\n",
-      "Please write the second number: f\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: 'f'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[82], line 5\u001b[0m\n\u001b[1;32m      2\u001b[0m second\u001b[38;5;241m=\u001b[39m\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPlease write the second number: \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m first\u001b[38;5;241m.\u001b[39misdigit \u001b[38;5;129;01mand\u001b[39;00m second\u001b[38;5;241m.\u001b[39misdigit:\n\u001b[0;32m----> 5\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mint\u001b[39m(first)\u001b[38;5;241m+\u001b[39m \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43msecond\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBad input\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: 'f'"
+      "Please write the second number: d\n",
+      "Bad input\n"
      ]
     }
    ],
@@ -392,7 +382,7 @@
     "first=input(\"Please write the first number: \")\n",
     "second=input(\"Please write the second number: \")\n",
     "\n",
-    "if first.isdigit and second.isdigit:\n",
+    "if first.isdigit() and second.isdigit():\n",
     "    print(int(first)+ int(second))\n",
     "else:\n",
     "    print(\"Bad input\")"
@@ -401,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2c0785f",
+   "id": "822082f9",
    "metadata": {},
    "outputs": [],
    "source": []
