--- a/Asma Alnuairat 2-Sep.ipynb
+++ b/Asma Alnuairat 2-Sep.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef4cb13b",
+   "id": "a1106e9b",
    "metadata": {},
    "source": [
     "# new exercise\n",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e6a31fcd",
+   "id": "0158c0af",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "7e1da9c8",
+   "id": "819d3342",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "cd377173",
+   "id": "9c5f1e91",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "4e09e2fa",
+   "id": "1b610d49",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "e6ea1d08",
+   "id": "8682d17b",
    "metadata": {
     "scrolled": true
    },
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "41607e3f",
+   "id": "0690c8e2",
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "f36da08b",
+   "id": "8702fcbb",
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "19056ed5",
+   "id": "13203418",
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "b57b1587",
+   "id": "25806b9a",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "8284457a",
+   "id": "2bbc60b4",
    "metadata": {},
    "outputs": [
     {
@@ -329,24 +329,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
-   "id": "1b152325",
+   "execution_count": 94,
+   "id": "39454a00",
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block after 'if' statement on line 6 (2206701307.py, line 7)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[89], line 7\u001b[0;36m\u001b[0m\n\u001b[0;31m    else:\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block after 'if' statement on line 6\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please enter first number 5\n",
+      "please enter second number 5\n",
+      "The sum of 5 and 5 is 10\n"
      ]
     }
    ],
    "source": [
-    "n1=input('Please enter first number')\n",
-    "n2=input('please enter second number')\n",
+    "n1=input('Please enter first number ')\n",
+    "n2=input('please enter second number ')\n",
     "if n1.isdigit() and n2.isdigit():\n",
-    "    print(f'The sum is {int(n1 + n2}')\n",
+    "    print(f'The sum of {n1} and {n2} is {int(n1) + int(n2)}')\n",
     "else:\n",
     "    if n1.isdigit():\n",
     "        print(f'{n2} is not a number!')\n",
@@ -357,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c8c6b02",
+   "id": "cc86c749",
    "metadata": {},
    "outputs": [],
    "source": []
