--- a/Prem 2Sep2024.ipynb
+++ b/Prem 2Sep2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "495a982c",
+   "id": "39938a21",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7edf7ffc",
+   "id": "5992a6a9",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "9dfddcc0",
+   "id": "2d22899b",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f729f40",
+   "id": "01c74758",
    "metadata": {},
    "source": [
     "to jest opis"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "7c5857cd",
+   "id": "4c980694",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "64fe6a25",
+   "id": "2ca904aa",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "6b8c9d98",
+   "id": "46aac553",
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "6ec0d42f",
+   "id": "380b402d",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "d2644ad7",
+   "id": "10f13a1c",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "3fcec7a6",
+   "id": "7f508fc4",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "c143be35",
+   "id": "12802f85",
    "metadata": {},
    "outputs": [
     {
@@ -252,8 +252,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "id": "e44b502a",
+   "execution_count": null,
+   "id": "36ff6553",
    "metadata": {},
    "outputs": [
     {
@@ -262,34 +262,25 @@
      "text": [
       "please enter number 1 : 123\n"
      ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'str' object has no attribute 'stripe'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[75], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m t1 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mplease enter number 1 : \u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstripe\u001b[49m()\n\u001b[1;32m      2\u001b[0m t2 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mplease enter number 2 : \u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39mstripe()\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m t1\u001b[38;5;241m.\u001b[39misdigit() :\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'stripe'"
-     ]
     }
    ],
    "source": [
-    "t1 = input('please enter number 1 : ').stripe()\n",
-    "t2 = input('please enter number 2 : ').stripe()\n",
+    "t1 = input('please enter number 1 : ').strip()\n",
+    "t2 = input('please enter number 2 : ').strip()\n",
     "if not t1.isdigit() :\n",
     "    print(f'{t1} is not a number !!!')\n",
     "elif not t2.isdigit() :\n",
     "    print(f'{t2} is not a number !!!')\n",
     "else :\n",
-    "    pront(f'{t1} + {t2} = {t1+t2}')"
+    "    t1 = int (t1)\n",
+    "    t2 = int (t2)\n",
+    "    print(f'{t1} + {t2} = {t1+t2}')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e1604e3",
+   "id": "c6c1691c",
    "metadata": {},
    "outputs": [],
    "source": []
