--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d2b0caa2",
+   "id": "f3924949",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "bf5bbf68",
+   "id": "91b0abd4",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "fbc8a1b6",
+   "id": "a96919ce",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9ffce676",
+   "id": "dc924d23",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "469391dd",
+   "id": "41217f60",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "120e7114",
+   "id": "a101f213",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "89d46143",
+   "id": "df5a1169",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "aa2bbd05",
+   "id": "91003ca9",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a19fd4e5",
+   "id": "0d4c216b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a35ccda2",
+   "id": "efc1cb79",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "4f72d4ca",
+   "id": "ac07280e",
    "metadata": {
     "scrolled": true
    },
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "f516befa",
+   "id": "a227ce0c",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "e795d9b5",
+   "id": "30115c45",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "e2e08350",
+   "id": "cdf21b97",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8af248a3",
+   "id": "d25b03c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "00f0443a",
+   "id": "5533820c",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "60824599",
+   "id": "f70016db",
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "5ade9240",
+   "id": "293a5b45",
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "aca0c567",
+   "id": "44060675",
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "8b7cd48b",
+   "id": "25fbf5b0",
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "d1b52e89",
+   "id": "943ee64d",
    "metadata": {},
    "outputs": [
     {
@@ -440,17 +440,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
-   "id": "12de1d62",
+   "execution_count": null,
+   "id": "2947bedf",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Enter number 1:40\n",
-      "Enter number 2:20\n",
-      "The sum of 40 and 20 is 60.\n"
+      "<>:6: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?\n",
+      "<>:6: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?\n"
      ]
     }
    ],
@@ -460,14 +459,14 @@
     "\n",
     "if number1.isdigit() and number2.isdigit():\n",
     "    print(f\"The sum of {number1} and {number2} is {int(number1) + int(number2)}.\")\n",
-    "else:\n",
+    "elif number1.isdigit <= 1 ():\n",
     "    print(\"One of the entries is not a number\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "edc9973c",
+   "id": "35811869",
    "metadata": {},
    "outputs": [],
    "source": []
