--- a/Sara_Sept 2nd, 2024.ipynb
+++ b/Sara_Sept 2nd, 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "396f68fe",
+   "id": "731b5e35",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "43dd1130",
+   "id": "e011ca21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8599025f",
+   "id": "b745d7ec",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "91f7d7c3",
+   "id": "76eef4d6",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "54862ab9",
+   "id": "de419b02",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9760ffa2",
+   "id": "919a8e06",
    "metadata": {},
    "source": [
     "## Bigger headline"
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "7c4efb6a",
+   "id": "ccb42ab9",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a9cbba90",
+   "id": "7306b519",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a3cefb13",
+   "id": "f06b46f3",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "7b160aa7",
+   "id": "adaa4a29",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "158c47b2",
+   "id": "8484fd87",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "75042268",
+   "id": "886ed359",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "6554cd08",
+   "id": "24063347",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "c7dd2259",
+   "id": "dd94e5de",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "7ddc3327",
+   "id": "7f60cf18",
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "afce2a43",
+   "id": "b2c66421",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "868a2189",
+   "id": "0daa13d8",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "4a5ad872",
+   "id": "6eced703",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "8f8edf11",
+   "id": "223bc092",
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "494250be",
+   "id": "fcdc117e",
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "ebf4134b",
+   "id": "a9524a8b",
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "50ba36dc",
+   "id": "c10f1e56",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "fdb86061",
+   "id": "9aeb37bd",
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "3f3b5f14",
+   "id": "155df006",
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "864fd8af",
+   "id": "a9e472e3",
    "metadata": {},
    "outputs": [
     {
@@ -555,25 +555,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
-   "id": "7167eb2e",
+   "execution_count": null,
+   "id": "536b4c47",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Put in 1 number: 1\n",
-      "Put in a 2nd number: 2\n",
-      "1 + 2 = 12\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x= input('Put in 1 number: ')\n",
     "y= input('Put in a 2nd number: ')\n",
-    "if x.isdigit and y.isdigit:\n",
-    "    print (x , '+', y, \"=\", int(x)+inty))\n",
+    "if (x.isdigit and y.isdigit):\n",
+    "    print (x , '+', y, \"=\", int(x)+int(y))\n",
     "else:\n",
     "    print('Bad input')\n"
    ]
@@ -581,7 +571,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbb8881c",
+   "id": "399dd11c",
    "metadata": {},
    "outputs": [],
    "source": []
