--- a/Ahmed Habib , 2nd Sep 2024.ipynb
+++ b/Ahmed Habib , 2nd Sep 2024.ipynb
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "6a23655b",
+   "id": "1f804fce",
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "880c59f0",
+   "id": "c01651db",
    "metadata": {},
    "outputs": [
     {
@@ -237,17 +237,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "555ddcc4",
+   "execution_count": 68,
+   "id": "cc48494b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Enter first number: hello\n",
+      " Enter first number: 123\n",
       " Enter second number: 123\n",
-      "this is not numeric\n"
+      "123123\n"
      ]
     }
    ],
@@ -255,7 +255,7 @@
     "number1 = input (' Enter first number: ')\n",
     "number2 = input (' Enter second number: ')\n",
     "if number1.isdigit() and number2.isdigit():\n",
-    "    print (number1 + number2)\n",
+    "    print (int (number1 + number2))\n",
     "else:\n",
     "    print ('this is not numeric')"
    ]
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "193ae40b",
+   "id": "df69f8a5",
    "metadata": {},
    "outputs": [],
    "source": []
