--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f3924949",
+   "id": "58177f71",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "91b0abd4",
+   "id": "666bd04d",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a96919ce",
+   "id": "88544fa6",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "dc924d23",
+   "id": "16353bfc",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "41217f60",
+   "id": "9a2adc93",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a101f213",
+   "id": "3045ba32",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "df5a1169",
+   "id": "b077b168",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "91003ca9",
+   "id": "137dca13",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d4c216b",
+   "id": "186395b7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "efc1cb79",
+   "id": "4a1c4408",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "ac07280e",
+   "id": "33e4ec50",
    "metadata": {
     "scrolled": true
    },
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "a227ce0c",
+   "id": "0862962e",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "30115c45",
+   "id": "8ef3ff44",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "cdf21b97",
+   "id": "e22b0ef2",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d25b03c2",
+   "id": "9d2f72ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "5533820c",
+   "id": "2cad8e97",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "f70016db",
+   "id": "0f81983f",
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "293a5b45",
+   "id": "58a5456b",
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "44060675",
+   "id": "6582fbbb",
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "25fbf5b0",
+   "id": "d585bd9a",
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "943ee64d",
+   "id": "e72eb276",
    "metadata": {},
    "outputs": [
     {
@@ -440,33 +440,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2947bedf",
+   "execution_count": 180,
+   "id": "4a3bea56",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<>:6: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?\n",
-      "<>:6: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?\n"
+      "Enter number 1: 10\n",
+      "Enter number 2: 20\n",
+      "The sum of 10 and 20 is 30.\n"
      ]
     }
    ],
    "source": [
-    "number1 = input(\"Enter number 1: \".strip())\n",
-    "number2 = input(\"Enter number 2: \".strip())\n",
+    "number1 = input(\"Enter number 1: \").strip()\n",
+    "number2 = input(\"Enter number 2: \").strip()\n",
     "\n",
     "if number1.isdigit() and number2.isdigit():\n",
     "    print(f\"The sum of {number1} and {number2} is {int(number1) + int(number2)}.\")\n",
-    "elif number1.isdigit <= 1 ():\n",
-    "    print(\"One of the entries is not a number\")"
+    "elif not number1.isdigit():\n",
+    "    print(\"The first entry is not a number\")\n",
+    "elif not number2.isdigit():\n",
+    "    print(\"The second entry is not a number\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35811869",
+   "id": "4af86861",
    "metadata": {},
    "outputs": [],
    "source": []
