--- a/Prem 2Sep2024.ipynb
+++ b/Prem 2Sep2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "39938a21",
+   "id": "e505f378",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5992a6a9",
+   "id": "6a4539b0",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "2d22899b",
+   "id": "d39bd553",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01c74758",
+   "id": "f987a18e",
    "metadata": {},
    "source": [
     "to jest opis"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4c980694",
+   "id": "3784833e",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "2ca904aa",
+   "id": "219a8d8e",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "46aac553",
+   "id": "f79f1095",
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "380b402d",
+   "id": "d09e8a04",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "10f13a1c",
+   "id": "c9bbb4a2",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "7f508fc4",
+   "id": "f238a456",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "12802f85",
+   "id": "42d522a6",
    "metadata": {},
    "outputs": [
     {
@@ -252,15 +252,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "36ff6553",
+   "execution_count": 85,
+   "id": "c1d189b1",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "please enter number 1 : 123\n"
+      "please enter number 1 : e\n",
+      "please enter number 2 : 12\n",
+      "e is not a valid number !!!\n"
      ]
     }
    ],
@@ -268,9 +270,11 @@
     "t1 = input('please enter number 1 : ').strip()\n",
     "t2 = input('please enter number 2 : ').strip()\n",
     "if not t1.isdigit() :\n",
-    "    print(f'{t1} is not a number !!!')\n",
+    "    print(f'{t1} is not a valid number !!!')\n",
+    "    if not t2.isdigit() :\n",
+    "        \n",
     "elif not t2.isdigit() :\n",
-    "    print(f'{t2} is not a number !!!')\n",
+    "    print(f'{t2} is not a valid number !!!')\n",
     "else :\n",
     "    t1 = int (t1)\n",
     "    t2 = int (t2)\n",
@@ -280,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6c1691c",
+   "id": "3b321ed4",
    "metadata": {},
    "outputs": [],
    "source": []
