--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "ab70bddc",
+   "id": "48e73848",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "65263656",
+   "id": "b0aecab5",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "39149933",
+   "id": "ebff6632",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "5b66b7b9",
+   "id": "87873647",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "892ec49f",
+   "id": "a4531cb9",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "588e5dc2",
+   "id": "4d58a797",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "b6c53050",
+   "id": "77f049d8",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "29c7ea97",
+   "id": "987551c7",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "70e51474",
+   "id": "28512238",
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "0c1e6e18",
+   "id": "3552ea77",
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "cd0a609b",
+   "id": "f1b850c3",
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "b100f817",
+   "id": "28cc7479",
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "95183beb",
+   "id": "8d271f65",
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "8507a7f9",
+   "id": "771cf0af",
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "fa98c27a",
+   "id": "af5cf108",
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "73f1b7e8",
+   "id": "7db07288",
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "3bce5666",
+   "id": "f197774c",
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "a656b580",
+   "id": "5bc5c099",
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "5586f5c1",
+   "id": "fbee7c97",
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +745,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "78754890",
+   "id": "9ffb94ed",
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "811a988a",
+   "id": "236abf7b",
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "095e3c78",
+   "id": "28a7d34c",
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "d0749edd",
+   "id": "54750dfc",
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "05f76e5c",
+   "id": "9273cc6d",
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "db62f0d1",
+   "id": "b2909c3f",
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +871,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "c4aed5e0",
+   "id": "c3e3a5eb",
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "4ef4446f",
+   "id": "46663d9b",
    "metadata": {},
    "outputs": [
     {
@@ -914,7 +914,7 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "c5831db0",
+   "id": "5a2bab9f",
    "metadata": {},
    "outputs": [
     {
@@ -933,24 +933,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
-   "id": "095021eb",
+   "execution_count": 160,
+   "id": "cf23e78d",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (3231100440.py, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[157], line 3\u001b[0;36m\u001b[0m\n\u001b[0;31m    if num1, num2 = int(num1, num2):\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter num1: 123\n",
+      "Enter num2: 4\n",
+      "123 is not numeric\n"
      ]
     }
    ],
    "source": [
     "num1 = input('Enter num1: ')\n",
     "num2 = input('Enter num2: ')\n",
-    "if num1, num2 = int(num1, num2):\n",
-    "    print(f'{num1} + {num2} = {num1+num2})\n",
+    "if num1 == int(num1) and num2 == int(num2):\n",
+    "    print(f'{num1} + {num2} = {num1+num2}')\n",
     "else:\n",
     "    print(f'{num1} is not numeric')"
    ]
@@ -958,7 +959,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51bee144",
+   "id": "212282a1",
    "metadata": {},
    "outputs": [],
    "source": []
