--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "d7b941c6",
+   "id": "d47b154c",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "301ba703",
+   "id": "86076504",
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "a831a8ef",
+   "id": "2efa653e",
    "metadata": {},
    "outputs": [
     {
@@ -228,27 +228,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "id": "8f35d083",
+   "execution_count": 73,
+   "id": "7a0c3458",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "please, enter some number: hi\n",
-      "please, enter some number: 5\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "can only concatenate str (not \"int\") to str",
+     "ename": "SyntaxError",
+     "evalue": "unmatched ')' (1756236227.py, line 10)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[70], line 9\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m num2\u001b[38;5;241m.\u001b[39misdigit():\n\u001b[1;32m      8\u001b[0m     num2 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(num2)\n\u001b[0;32m----> 9\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnum1\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m + \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnum2\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mnum1\u001b[49m\u001b[38;5;250;43m \u001b[39;49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[38;5;250;43m \u001b[39;49m\u001b[43mnum2\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[0;31mTypeError\u001b[0m: can only concatenate str (not \"int\") to str"
+      "\u001b[0;36m  Cell \u001b[0;32mIn[73], line 10\u001b[0;36m\u001b[0m\n\u001b[0;31m    )\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unmatched ')'\n"
      ]
     }
    ],
@@ -257,17 +246,18 @@
     "num1 = input('please, enter some number: ')\n",
     "num2 = input('please, enter some number: ')\n",
     "\n",
-    "if num1.isdigit():\n",
-    "    print(f'')\n",
+    "if num1.isdigit() and num2.isdigit():\n",
+    "    print(f'{num1}+{num2}')\n",
     "elif num2.isdigit():\n",
     "    num2 = int(num2)\n",
-    "print(f'{num1} + {num2} = {num1 + num2}')"
+    "else:\n",
+    "    )"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02805a2e",
+   "id": "187ca368",
    "metadata": {},
    "outputs": [],
    "source": []
