--- a/Prem 2Sep2024.ipynb
+++ b/Prem 2Sep2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e505f378",
+   "id": "5c047ed5",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6a4539b0",
+   "id": "7df46383",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d39bd553",
+   "id": "8add108e",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f987a18e",
+   "id": "91ae2748",
    "metadata": {},
    "source": [
     "to jest opis"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3784833e",
+   "id": "30e1588f",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "219a8d8e",
+   "id": "cf22193e",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "f79f1095",
+   "id": "b1e26531",
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "d09e8a04",
+   "id": "f6450bcb",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "c9bbb4a2",
+   "id": "254a0656",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "f238a456",
+   "id": "4c5cf931",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "42d522a6",
+   "id": "e4c42f64",
    "metadata": {},
    "outputs": [
     {
@@ -252,17 +252,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
-   "id": "c1d189b1",
+   "execution_count": 88,
+   "id": "d9c10216",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "please enter number 1 : e\n",
-      "please enter number 2 : 12\n",
-      "e is not a valid number !!!\n"
+      "please enter number 1 : 1\n",
+      "please enter number 2 : 123\n",
+      "1 + 123 = 124\n"
      ]
     }
    ],
@@ -272,7 +272,7 @@
     "if not t1.isdigit() :\n",
     "    print(f'{t1} is not a valid number !!!')\n",
     "    if not t2.isdigit() :\n",
-    "        \n",
+    "        print(f'{t2} is not a valid number !!!')\n",
     "elif not t2.isdigit() :\n",
     "    print(f'{t2} is not a valid number !!!')\n",
     "else :\n",
@@ -284,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b321ed4",
+   "id": "85fd6f15",
    "metadata": {},
    "outputs": [],
    "source": []
